--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Note to Self</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
   <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+  <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
 
   <script type="text/javascript" src="app.js"></script>
 </head>
